--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # react프로젝트에서는 반드시 REACT_APP으로 접두어 붙여야 함
 # SNS API URL
-
-
 PORT = 8000
-
 NODE_ENV=development
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+FRONTEND_APP_URL=http://localhost:3000
