--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ NODE_ENV=development
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 FRONTEND_APP_URL=http://localhost:3000
+
+# 추가: 세션을 위한 시크릿 키 (아무 문자열이나 가능)
+COOKIE_SECRET=mysecretkey123
