--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NODE_ENV=development
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 FRONTEND_APP_URL=http://localhost:3000
+COOKIE_SECRET=mysecretkey123
