--- a/.env
+++ b/.env
@@ -8,12 +8,7 @@ NODE_ENV=development
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 FRONTEND_APP_URL=http://localhost:3000
-<<<<<<< HEAD
-COOKIE_SECRET=mysecretkey123
-=======
-
-# 추가: 세션을 위한 시크릿 키 (아무 문자열이나 가능)
 COOKIE_SECRET=mysecretkey123
 
-
->>>>>>> 48799a821835c255b803dea4da77f399a9bed2e5
+EMAIL_USER=pjw01114@gmail.com
+EMAIL_PASS = rqprevulnkgqqssn
