타이머 보안문자 및 파이썬

--- a/.env
+++ b/.env
@@ -11,3 +11,9 @@ COOKIE_SECRET=mysecretkey123
 
 EMAIL_USER=pjw01114@gmail.com
 EMAIL_PASS = rqprevulnkgqqssn
+
+
+MYSQL_HOST=127.0.0.1
+MYSQL_USER=root
+MYSQL_PASSWORD=1234
+MYSQL_DATABASE=studyming
