채택라우터 생성

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=1234
 MYSQL_DATABASE=studyming
+
+KAKAO_REST_API_KEY=72d0a0c9186726ef8ef0d2a6793760a2
+KAKAO_REDIRECT_URI=http://localhost:3000/auth/kakao/callback
