--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=1234
 MYSQL_DATABASE=studyming
+
+
+KAKAO_REST_API_KEY=86dd8684e7a4e065b4549e2c3de4cdfd
+KAKAO_REDIRECT_URI=http://localhost:3000/auth/kakao/callback
