화상 채팅 난리

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
    "name": "studyming-api",
    "version": "1.0.0",
    "description": "online studygroup site",
-   "main": "app.js",
+   "main": "server.js",
    "scripts": {
-      "start": "nodemon app",
+      "start": "nodemon server.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
