--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "author": "f4 team",
    "license": "ISC",
    "dependencies": {
+      "axios": "^1.8.1",
       "bcrypt": "^5.1.1",
       "cookie-parser": "^1.4.7",
       "cors": "^2.8.5",
