--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,23 @@
       "password": "1234",
       "database": "studyming",
       "host": "127.0.0.1",
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "timezone": "+09:00"
    },
    "test": {
       "username": "root",
       "password": "",
       "database": "",
       "host": "127.0.0.1",
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "timezone": "+09:00"
    },
    "production": {
       "username": "root",
       "password": "",
       "database": "",
       "host": "127.0.0.1",
-      "dialect": "mysql"
+      "dialect": "mysql",
+      "timezone": "+09:00"
    }
 }
